Fix: 상품 응답 변경